# rt

./: .gitignore  Cargo.toml  README.md  SKILL.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
pytest_rt/: enable_pytest_rt.py  pytest_rt.py
python/riot/: __init__.py  __main__.py  rt.py
riot/: __init__.py
riot-extension/: .vscodeignore  LICENSE  README.md  build-runtime.sh  package-lock.json  package.json
riot-extension/runtime/libexec/: uv
riot-extension/src/: api.ts  commands.ts  extension.ts  patchBundledPython.ts  pythonEnvsApi.ts  riotEnvManager.ts  riotPackageManager.ts  venvIndicators.ts
riot-extension/src/formatters/: environmentFormatter.ts
riot-extension/src/services/: rtCliService.ts  statePersistence.ts  testingConfigManager.ts  venvIndicatorService.ts  workspaceResolver.ts
riot-extension/src/types/: rtTypes.ts
rt/: __init__.py  __main__.py  _rt.pyi
scripts/: build-runtime.sh
src/: command.rs  completion.rs  config.rs  constants.rs  display.rs  error.rs  fake_ruamel_yaml.rs  lib.rs  main.rs  progress.rs  ui.rs  venv.rs
src/commands/: activate.rs  build.rs  clean.rs  completion.rs  describe.rs  list.rs  mod.rs  run.rs  shell.rs  switch.rs
src/config_provider/: fake_ruamel_yaml.rs  mod.rs  pyo3.rs  rustpython.rs
tests/data/: real_use_riotfile.py
