[package]
name = "rt"
version = "0.2.0"
edition = "2024"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
uv = { version = "0.10.6", default-features = false, features = [
    "performance",
    "performance-memory-allocator",
] }

pyo3 = "0.28.2"
rayon = "1.11.0"

clap = { version = "4.5.60", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }
crossterm = "0.29"

toml = "1.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

indexmap = { version = "2.13.0", features = ["serde"] }
shell-words = "1.1"
itertools = "0.14"
tempfile = "3.26"
sha2 = "0.10"
fancy-regex = "0.17.0"
serde_yaml = "0.9.34"
