[package]
name = "rt"
version = "0.2.2"
edition = "2024"

[features]
default = ["provider-pyo3"]
provider-pyo3 = ["dep:pyo3"]
provider-rustpython = ["dep:rustpython", "dep:rustpython-vm"]

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
uv = { version = "0.10.11", default-features = false, features = [
    "performance",
    "performance-memory-allocator",
] }

pyo3 = { version = "0.28.2", optional = true }
rustpython = { version = "0.4.0", features = ["freeze-stdlib"], optional = true }
rustpython-vm = { version = "0.4.0", optional = true }
rayon = "1.11.0"

clap = { version = "4.6.0", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
crossterm = "0.29"

toml = "1.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

indexmap = { version = "2.13.0", features = ["serde"] }
shell-words = "1.1"
itertools = "0.14"
tempfile = "3.27"
sha2 = "0.10"
fancy-regex = "0.17.0"
serde_yaml = "0.9.34"
