[package]
name = "rt"
version = "1.0.0"
edition = "2024"

[lib]
name = "_rt"
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
pyo3 = "0.28.3"
rayon = "1.11.0"

clap = { version = "4.6.0", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
crossterm = "0.29"

toml = "1.1"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

indexmap = { version = "2.13.0", features = ["serde"] }
shell-words = "1.1"
itertools = "0.14"
tempfile = "3.27"
sha2 = "0.11"
fancy-regex = "0.17.0"
