[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rt"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["uv>=0.9.7"]

[project.scripts]
"rt" = "riot:run_cli"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["pytest_rt/**/*"]
exclude = ["pytest_rt/**/__pycache__/"]

[dependency-groups]
dev = ["maturin>=1.9.6"]
