[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rt"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "ruamel-yaml>=0.19.1",
    "uv>=0.9.7",
]

[project.scripts]
"rt" = "riot:run_cli"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["pytest_rt/**/*"]
exclude = ["pytest_rt/**/__pycache__/"]

[dependency-groups]
dev = [
    "ddtrace>=4.3.2",
    "maturin>=1.9.6",
    "pytest>=8.4.2",
]
