[build-system]
requires = ["maturin>=1.13.1,<2"]
build-backend = "maturin"

[project]
name = "rt"
version = "1.0.1"
requires-python = ">=3.9"
dependencies = ["uv>=0.6", "ruamel.yaml>=0.19.1"]

[dependency-groups]
dev = ["maturin>=1.13.1,<2"]

[project.scripts]
rt = "rt:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rt._rt"
python-packages = ["rt", "riot"]
